# limpopo

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/yesno/: main.py  poll.py  quiz.py  telegram_bot.py  viber_bot.py
limpopo/: const.py  dto.py  exceptions.py  helpers.py  markdown_message.py  question.py  video.py
limpopo/services/: __init__.py  archetype.py  telegram.py  viber.py
limpopo/storages/: __init__.py  archetype.py  fake.py
limpopo/storages/postgres/: storage.py  tables.py
limpopo/storages/postgres/migrations/: env.py
limpopo/storages/postgres/migrations/versions/: 100f64d6906c_initial_metadata.py  25fb7f9892ad_added_called_functions_table.py  76b3fed43166_added_pauses.py  cfae1eb34e12_initial_metadata.py
tests/: test_limpopo.py
